# blitz-2025-registration

./: README.md  application.py  bot.py  game_message.py  package.sh  search.py
bot/: .gitignore  Cargo.toml  application.py  bot.py  core-requirements.txt  dev-requirements.txt  game_message.py  package.sh  replay.sh  replay_all.sh  replayer.py  requirements.txt  run.sh  rust_interop.py
bot/benches/: benchmarks.rs
bot/src/: grid.rs  lib.rs  main.rs  map_loader.rs  mcts.rs  pathfinding.rs  search.rs  simple_bot.rs  simulation.rs
disassembled_js/: README.md  disassemble.sh
disassembled_js/490a918d96484178d4b23d814405ac87/challenge/: character.decomp.js  character.disass.js  entity.decomp.js  entity.disass.js  error.decomp.js  error.disass.js  game.decomp.js  game.disass.js  game.js  index.decomp.js  index.disass.js  package.json  random.decomp.js  random.disass.js  random.js  world.decomp.js  world.disass.js  world.js
disassembled_js/490a918d96484178d4b23d814405ac87/challenge-launcher/: index.decomp.js  index.disass.js  index.js
disassembled_js/490a918d96484178d4b23d814405ac87/challenge/actions/: action.decomp.js  action.disass.js  action.js  action_types.decomp.js  action_types.disass.js
disassembled_js/490a918d96484178d4b23d814405ac87/challenge/geometry/: vector.decomp.js  vector.disass.js
disassembled_js/490a918d96484178d4b23d814405ac87/challenge/maps/: map_loader.decomp.js  map_loader.disass.js  map_loader.js
disassembled_js/490a918d96484178d4b23d814405ac87_v2/challenge/: character.disass.js  character.js  entity.disass.js  entity.js  error.disass.js  error.js  game.disass.js  index.disass.js  index.js  random.disass.js  world.disass.js
disassembled_js/490a918d96484178d4b23d814405ac87_v2/challenge-launcher/: index.disass.js
(+42 files in other folders)
