[package]
name = "devnull_bot"
edition = "2021"
version = "0.1.0"

[lib]
name = "devnull_bot"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"]  }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]   }

[profile.release]
debug = 1
