[package]
name = "devnull_bot"
edition = "2021"
version = "0.1.0"

[lib]
name = "devnull_bot"
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"]  }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8.5"
once_cell = "1.20.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]   }
pprof = { version = "0.13", features = ["flamegraph", "criterion"]  } 

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = 1
